[tool.isort]
profile = "black"

[tool.poetry]
name = "bot"
version = "1.0"
description = ""
authors = ["Tom Carrick <tom@carrick.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
